package schumacher.dennis.visualisierungtouchpad;

/**
 * Hauptklasse zum Starten der Anwendung
 */
public class Main {
  public static void main(String[] argumente) {
    new Initalisierung(argumente);
  }
}
