@startuml

title __TOUCHINPUT's Class Diagram__\n

  namespace schumacher.dennis.visualisierungtouchpad {
    class schumacher.dennis.visualisierungtouchpad.AnzeigeFenster {
    }
  }
  

  namespace schumacher.dennis.visualisierungtouchpad {
    class schumacher.dennis.visualisierungtouchpad.DatenstromAufbereiter {
    }
  }
  

  namespace schumacher.dennis.visualisierungtouchpad {
    class schumacher.dennis.visualisierungtouchpad.DoppelPunkt {
    }
  }
  

  namespace schumacher.dennis.visualisierungtouchpad {
    class schumacher.dennis.visualisierungtouchpad.Initalisierung {
    }
  }
  

  namespace schumacher.dennis.visualisierungtouchpad {
    class schumacher.dennis.visualisierungtouchpad.Main {
    }
  }
  

  namespace schumacher.dennis.visualisierungtouchpad {
    interface schumacher.dennis.visualisierungtouchpad.SpannungsFilter {
    }
  }
  

  namespace schumacher.dennis.visualisierungtouchpad {
    class schumacher.dennis.visualisierungtouchpad.SpannungsFilterImplementierung {
    }
  }
  

  namespace schumacher.dennis.visualisierungtouchpad {
    class schumacher.dennis.visualisierungtouchpad.Zeichner {
    }
  }
  

  schumacher.dennis.visualisierungtouchpad.AnzeigeFenster -up-|> javax.swing.JFrame
  schumacher.dennis.visualisierungtouchpad.AnzeigeFenster o-- schumacher.dennis.visualisierungtouchpad.DatenstromAufbereiter : datenstromAufbereiter
  schumacher.dennis.visualisierungtouchpad.AnzeigeFenster o-- schumacher.dennis.visualisierungtouchpad.SpannungsFilter : spannungsFilter
  schumacher.dennis.visualisierungtouchpad.AnzeigeFenster o-- schumacher.dennis.visualisierungtouchpad.Zeichner : zeichner
  schumacher.dennis.visualisierungtouchpad.Initalisierung o-- schumacher.dennis.visualisierungtouchpad.AnzeigeFenster : anzeigeFenster
  schumacher.dennis.visualisierungtouchpad.SpannungsFilterImplementierung .up.|> schumacher.dennis.visualisierungtouchpad.SpannungsFilter
  schumacher.dennis.visualisierungtouchpad.Zeichner -up-|> javax.swing.JPanel
  schumacher.dennis.visualisierungtouchpad.Zeichner o-- schumacher.dennis.visualisierungtouchpad.DoppelPunkt : punkt
  schumacher.dennis.visualisierungtouchpad.Zeichner o-- schumacher.dennis.visualisierungtouchpad.DoppelPunkt : punktDavor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
